--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "owntracks",
-    "REST API"
+    "owntracks"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ioBroker/ioBroker.owntracks"
   },
   "dependencies": {
-    "express": "^4.13.4",
-    "request": "^2.72.0"
+    "create-stream-server": "^0.1.1",
+    "mqtt-connection": "^2.1.1"
   },
   "devDependencies": {
       "grunt": "^0.4.5",
