--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "grunt-jscs": "^2.0.0",
       "grunt-http": "^1.6.0",
       "mocha": "^2.3.4",
-      "chai": "^3.4.1"
+      "chai": "^3.4.1",
+      "request": "^2.75.0"
   },
   "main": "main.js",
   "scripts": {
