--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/ioBroker/ioBroker.owntracks"
   },
   "dependencies": {
+    "libsodium-wrappers": "^0.7.3",
     "create-stream-server": "^0.1.1",
     "mqtt-connection": "^2.1.1"
   },
