--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.owntracks",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "ioBroker OwnTracks Adapter",
   "author": {
     "name": "bluefox",
@@ -14,6 +14,10 @@
     {
       "name": "matspi",
       "email": "matthias.spiller@fari.software"
+    },
+    {
+      "name": "zefau",
+      "email": "zefau@mailbox.org"
     }
   ],
   "homepage": "https://github.com/ioBroker/ioBroker.owntracks",
