--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "mocha": "^6.0.2",
     "request": "^2.88.0",
     "gulp": "^4.0.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "main": "main.js",
   "scripts": {
