--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   "dependencies": {
     "libsodium-wrappers": "^0.7.3",
     "create-stream-server": "^0.1.1",
-    "mqtt-connection": "^2.1.1"
+    "mqtt-connection": "^2.1.1",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
     "request": "^2.88.0",
     "gulp": "^4.0.0",
-    "axios": "^0.18.0",
-    "@iobroker/adapter-core": "^1.0.3"
+    "axios": "^0.18.0"
   },
   "main": "main.js",
   "scripts": {
