--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "iobroker.owntracks",
-  "version": "0.6.2",
+  "version": "1.0.0-beta.1",
   "description": "OwnTracks - Your location companion",
   "author": {
-    "name": "bluefox",
-    "email": "dogafox@gmail.com"
+    "name": "zefau",
+    "email": "zefau@mailbox.org"
   },
   "contributors": [
+    {
+      "name": "zefau",
+      "email": "zefau@mailbox.org"
+    },
     {
       "name": "bluefox",
       "email": "dogafox@gmail.com"
@@ -14,37 +18,36 @@
     {
       "name": "matspi",
       "email": "matthias.spiller@fari.software"
-    },
-    {
-      "name": "zefau",
-      "email": "zefau@mailbox.org"
     }
   ],
   "homepage": "https://github.com/iobroker-community-adapters/ioBroker.owntracks",
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "owntracks"
+    "owntracks",
+    "location"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/iobroker-community-adapters/ioBroker.owntracks"
   },
   "dependencies": {
-    "libsodium-wrappers": "^0.7.3",
-    "create-stream-server": "^0.1.1",
-    "mqtt-connection": "^2.1.1"
+    "libsodium-wrappers": "^0.7.4",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
+    "gulp": "^4.0.1",
+    "mocha": "^6.1.4",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "request": "^2.88.0",
-    "gulp": "^4.0.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "@iobroker/testing": "^1.1.16"
   },
-  "main": "main.js",
+  "main": "owntracks.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit"
+    "test": "npm run test:package && npm run test:unit",
+    "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit"
   },
   "bugs": {
     "url": "https://github.com/iobroker-community-adapters/ioBroker.owntracks/issues"
