--- a/package.json
+++ b/package.json
@@ -37,19 +37,21 @@
     "@iobroker/adapter-core": "^2.4.0"
   },
   "devDependencies": {
+    "@alcalzone/release-script": "^1.8.1",
+    "@iobroker/testing": "^2.3.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "request": "^2.88.2",
     "gulp": "^4.0.2",
-    "axios": "^0.21.0",
-    "@iobroker/testing": "^2.3.0"
+    "axios": "^0.21.0"
   },
   "main": "main.js",
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
-    "test:integration": "mocha test/integration --exit"
+    "test:integration": "mocha test/integration --exit",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/iobroker-community-adapters/ioBroker.owntracks/issues"
