--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "devDependencies": {
     "@alcalzone/release-script": "^1.10.0",
-    "@iobroker/testing": "^2.4.4",
-    "chai": "^4.3.0",
-    "mocha": "^8.3.2",
-    "request": "^2.88.2",
+    "@iobroker/testing": "^2.5.2",
+    "axios": "^0.21.4",
+    "chai": "^4.3.4",
     "gulp": "^4.0.2",
-    "axios": "^0.21.1"
+    "mocha": "^8.4.0",
+    "request": "^2.88.2"
   },
   "main": "main.js",
   "scripts": {
