--- a/package.json
+++ b/package.json
@@ -34,18 +34,17 @@
     "libsodium-wrappers": "^0.7.10",
     "create-stream-server": "^0.1.1",
     "mqtt-connection": "^4.1.0",
-    "@iobroker/adapter-core": "^2.6.6"
+    "@iobroker/adapter-core": "^2.6.7"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
     "@alcalzone/release-script-plugin-iobroker": "^3.5.9",
     "@alcalzone/release-script-plugin-license": "^3.5.9",
+    "@iobroker/adapter-dev": "^1.1.0",
     "@iobroker/testing": "^4.1.0",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
-    "request": "^2.88.2",
-    "gulp": "^4.0.2",
-    "axios": "^0.27.2"
+    "request": "^2.88.2"
   },
   "main": "main.js",
   "scripts": {
@@ -53,7 +52,8 @@
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
-    "release": "release-script"
+    "release": "release-script",
+    "translate": "translate-adapter"
   },
   "bugs": {
     "url": "https://github.com/iobroker-community-adapters/ioBroker.owntracks/issues"
