--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "type": "git",
     "url": "https://github.com/iobroker-community-adapters/ioBroker.owntracks"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "dependencies": {
     "libsodium-wrappers": "^0.7.11",
     "create-stream-server": "^0.1.1",
